# vood

./: .gitignore  ARCHITECTURAL_ANALYSIS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CONFIG.md  HOLE_MATCHING.md  PLAYWRIGHT_SERVER.md  README.md  a.txt  clipping_basic.-svg  example_website_embedding.py  extract_embeddable.py  package-lock.json  pyproject.toml  run_tests.py  test_hole_classes.py  x.py  y.py
.github/workflows/: test.yml
benchmark/: README.md  interpolation_only_benchmark.py  run_benchmark.py  vertex_interpolation_benchmark.py
docs/: CHANGELOG.md  COLOR_SCHEMES.md  CONFIG.md  DEVSERVER.md  HOLE_MATCHING.md  JUPYTER_SUPPORT.md  PLAYWRIGHT_SERVER.md  PROJECT_ROADMAP.md  TESTING_EXPANSION_SUMMARY.md  WORK_COMPLETE.md  architecture-analysis.md
examples/: 01_ellipse_layout.py  02_simple_animation.py  03_logging.py  04_line_layout_animation.py  05_two_step_transition.py  06_the_wave.py  07_keyframes.py  07_timed_keystates.py  08_easing_variety.py  08_keyframes_variety.py  08_keystates_variety.py  09_global_transitions.py  09_keyframes_variety_two.py  09_property_keystates.py  09_property_timelines.py  10_easing_variety.py  10_instance_easing.py  10_property_easing.py  11_element_alignment.py  11_segment_easing.py  12_give_me_a_break.py  13_element_alignment.py  13_not_always.py  14_element_alignment.py  15_group_dynamics.py  16_animation_helper.py  17_compound_animation.py  18_path_morphing.py  19_path_text_morphing.py  19_text_path_morphing.py  20_shape_morphing.py  21_layout_show_case.py  22_vertex_show_case.py  23_complex_morph.py  24_clipping_basic.py  24_perforated_strategies.py  25_clipping_multiple_basic.py  25_hole_mapping_showcase.py  26_clipping_animated.py  27_clipping_animated.py  (+36 more)
tests/: README.md  __init__.py  conftest.py
tests/benchmark/: __init__.py  test_performance_benchmarks.py
tests/integration/: __init__.py  test_complete_animations.py  test_export_workflows.py  test_morphing_workflows.py
tests/unit/: __init__.py
vood/: __init__.py
vood/animation/: __init__.py  enums.py
vood/cli/: __init__.py  devserver_commands.py  main.py  playwright_server_commands.py
vood/component/: __init__.py  registry.py
vood/components/: __init__.py  all.py  base.py  circle.py  circle_text.py  double_circle.py  ellipse.py  image.py  line.py  moon_phase.py  path.py  path_text.py  radial_segments.py  raw_svg.py  rectangle.py  star.py  text.py  triangle.py
vood/config/: __init__.py  config.py  config_key.py  defaults.toml
vood/converter/: __init__.py  cairo_svg_converter.py  converter_type.py  imagemagick_svg_converter.py  inkscape_svg_converter.py  pdf_page_sizes.py  playwright_http_svg_converter.py  svg_converter.py  (+1 more)
(+410 files in other folders)
