[project]
name = "vood"
version = "0.1.0"
description = "Vood library for programmatic SVG graphics and animation"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "drawsvg",
]

[project.optional-dependencies]
# Playwright HTTP server dependencies
playwright-server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "playwright>=1.40.0",
    "psutil>=5.9.0",
    "click>=8.1.0",
    "requests>=2.31.0",
]

# All optional dependencies
all = [
    "vood[playwright-server]",
]

[project.scripts]
vood = "vood.cli.main:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vood"]